--- a/practice_01_assignment.ipynb
+++ b/practice_01_assignment.ipynb
@@ -1273,7 +1273,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -1287,7 +1287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
