260210 3회차 과제 문제3-1까지 제출(수업 분량)

--- a/practice_02_assignment.ipynb
+++ b/practice_02_assignment.ipynb
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
     "\n",
     "print(f\"\\n(b) P(A) × P(B) = {p_A_times_B}\")\n",
     "print(f\"    P(A ∩ B) = {p_A_and_B}\")\n",
-    "# print(f\"    → 독립 여부: ...\")\n",
+    "print(f\"    → 독립 여부: 독립입니다.\")\n",
     "\n",
     "\n",
     "# TODO (c): 조건부 확률 계산\n",
@@ -254,7 +254,7 @@
     "\n",
     "print(f\"\\n(c) P(B|A) = {p_B_given_A}\")\n",
     "print(f\"    P(B) = {p_B}\")\n",
-    "# print(f\"    → 해석: ...\")"
+    "print(f\"    → 해석: 독립입니다.\")"
    ]
   },
   {
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
