4일차 과제 최종 제출

--- a/practice_03_assignment.ipynb
+++ b/practice_03_assignment.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -799,17 +799,31 @@
       "\n",
       "(a) 제과업체에서 과자 1봉지의 규격 중량은 150g입니다.\n",
       "    생산라인에서 12봉지를 샘플링하여 규격에 맞는지 확인하려 합니다.\n",
+      "    사용할 검정: 단일표본 t-검정\n",
+      "    이유: 단일표본 -> 연속형 변수.\n",
+      "    shapiro-wilk 정규성 검정을 시행할 데이터셋이 주어지지 않았으므로 정규성이 충족되었다고 가정.\n",
+      "    따라서 단일표본 t-검정 수행.\n",
       "\n",
       "(b) A반(30명)과 B반(28명) 학생들의 수학 점수 차이를 비교\n",
       "    (두 반의 분산이 비슷함)\n",
+      "    사용할 검정: 독립표본 t-검정(Student's)\n",
+      "    이유: 집단비교 -> 집단 2개 -> 독립 -> 정규성 만족 가정 -> 등분산(문제 조건)\n",
+      "     따라서 독립표본 t-검정(Student's)\n",
       "\n",
       "(c) A공장(25개)과 B공장(30개) 배터리 수명을 비교하려 하는데,\n",
       "    두 공장의 분산이 같은지 모릅니다.\n",
+      "    사용할 검정: 독립표본 t-검정(Welch's)\n",
+      "    이유: 집단비교 -> 집단 2개 -> 독립 -> 정규성 만족 가정 -> 이분산(문제 조건)\n",
+      "    두 독립 집단의 평균 차이를 이분산 보정하여 검정하기 위해 Welch's t-검정 수행\n",
       "\n",
       "(d) 같은 환자 20명에게 치료 전후 혈압을 측정하여 치료 효과를 검증\n",
+      "    사용할 검정: 대응표본 t-검정\n",
+      "    이유: 집단비교 -> 집단 2개 -> 대응 -> 정규성 만족 가정\n",
+      "    처리 전후 평균 차이를 검정하기 위해 대응표본 t-검정 수행\n",
       "\n",
       "(e) 만약 (d)의 데이터를 독립표본 t-검정으로 잘못 분석하면\n",
-      "    어떤 문제가 생기나요?\n"
+      "    어떤 문제가 생기나요?\n",
+      "    문제점: 독립이 아닌 두 집단을 독립이라 가정하여 분석하게 되면, 공분산성 문제가 발생한다.\n"
      ]
     }
    ],
@@ -822,30 +836,36 @@
     "# TODO (a)\n",
     "print(\"\\n(a) 제과업체에서 과자 1봉지의 규격 중량은 150g입니다.\")\n",
     "print(\"    생산라인에서 12봉지를 샘플링하여 규격에 맞는지 확인하려 합니다.\")\n",
-    "# print(f\"    사용할 검정: ...\")\n",
-    "# print(f\"    이유: ...\")\n",
+    "\n",
+    "print(f\"    사용할 검정: 단일표본 t-검정\")\n",
+    "print(f\"    이유: 단일표본 -> 연속형 변수.\")\n",
+    "print(f\"    shapiro-wilk 정규성 검정을 시행할 데이터셋이 주어지지 않았으므로 정규성이 충족되었다고 가정.\")\n",
+    "print(f\"    따라서 단일표본 t-검정 수행.\")\n",
     "\n",
     "# TODO (b)\n",
     "print(\"\\n(b) A반(30명)과 B반(28명) 학생들의 수학 점수 차이를 비교\")\n",
     "print(\"    (두 반의 분산이 비슷함)\")\n",
-    "# print(f\"    사용할 검정: ...\")\n",
-    "# print(f\"    이유: ...\")\n",
+    "print(f\"    사용할 검정: 독립표본 t-검정(Student's)\")\n",
+    "print(f\"    이유: 집단비교 -> 집단 2개 -> 독립 -> 정규성 만족 가정 -> 등분산(문제 조건)\")\n",
+    "print(f\"     따라서 독립표본 t-검정(Student's)\")\n",
     "\n",
     "# TODO (c)\n",
     "print(\"\\n(c) A공장(25개)과 B공장(30개) 배터리 수명을 비교하려 하는데,\")\n",
     "print(\"    두 공장의 분산이 같은지 모릅니다.\")\n",
-    "# print(f\"    사용할 검정: ...\")\n",
-    "# print(f\"    이유: ...\")\n",
+    "print(f\"    사용할 검정: 독립표본 t-검정(Welch's)\")\n",
+    "print(f\"    이유: 집단비교 -> 집단 2개 -> 독립 -> 정규성 만족 가정 -> 이분산(문제 조건)\")\n",
+    "print(f\"    두 독립 집단의 평균 차이를 이분산 보정하여 검정하기 위해 Welch's t-검정 수행\")\n",
     "\n",
     "# TODO (d)\n",
     "print(\"\\n(d) 같은 환자 20명에게 치료 전후 혈압을 측정하여 치료 효과를 검증\")\n",
-    "# print(f\"    사용할 검정: ...\")\n",
-    "# print(f\"    이유: ...\")\n",
+    "print(f\"    사용할 검정: 대응표본 t-검정\")\n",
+    "print(f\"    이유: 집단비교 -> 집단 2개 -> 대응 -> 정규성 만족 가정\")\n",
+    "print(f\"    처리 전후 평균 차이를 검정하기 위해 대응표본 t-검정 수행\")\n",
     "\n",
     "# TODO (e)\n",
     "print(\"\\n(e) 만약 (d)의 데이터를 독립표본 t-검정으로 잘못 분석하면\")\n",
     "print(\"    어떤 문제가 생기나요?\")\n",
-    "# print(f\"    문제점: ...\")"
+    "print(f\"    문제점: 독립이 아닌 두 집단을 독립이라 가정하여 분석하게 되면, 공분산성 문제가 발생한다.\")"
    ]
   },
   {
@@ -867,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -943,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -952,7 +972,23 @@
      "text": [
       "\n",
       "[문제 4-1] 대응표본 t-검정\n",
-      "----------------------------------------\n"
+      "----------------------------------------\n",
+      "differences mean = 2.6799999999999993\n",
+      "differences std = 4.664179609381635\n",
+      "differences se = 1.2042859967236856\n",
+      "H0 : mu = 0\n",
+      "H1 : mu > 0\n",
+      "p=0.4768 (정규성 만족) -> 모수 검정 사용 (예: t-test)\n",
+      "t-statistic: 2.225, p-value: 0.0215\n",
+      "영어학습 앱 효과가 통계적으로 유의합니다.\n",
+      "영어학습 앱 사용 후가 전보다 평균 2.68점 높다.\n",
+      "이는 차이 없음에서 t-통계량(2.23)만큼 떨어져있는 수치이며\n",
+      "p-value(0.02)에 의해 귀무가설을 유의하게 기각한다고 볼 수 있음.\n",
+      "영어학습 앱의 효과 크기는 0.57이며,\n",
+      "효과 크기: 중간 (Medium Effect)\n",
+      "따라서 영어학습 앱을 사용할 것을 권장합니다.\n",
+      "평균 : 2.6799999999999993\n",
+      "95% 신뢰구간 : [0.10, 5.26]\n"
      ]
     }
    ],
@@ -962,14 +998,55 @@
     "\n",
     "alpha = 0.05\n",
     "differences = after_scores - before_scores\n",
+    "diff_mean = differences.mean()\n",
+    "diff_std = differences.std(ddof=1)\n",
+    "diff_se = diff_std / np.sqrt(n_students)\n",
+    "print(f\"differences mean = {diff_mean}\")\n",
+    "print(f\"differences std = {diff_std}\")\n",
+    "print(f\"differences se = {diff_se}\")\n",
     "\n",
     "# TODO (a): 가설 설정\n",
+    "print(f\"H0 : mu = 0\")\n",
+    "print(f\"H1 : mu > 0\")\n",
+    "\n",
     "\n",
     "# TODO (b): 대응표본 t-검정\n",
     "\n",
-    "# TODO (c): 결론\n",
+    "stat, diff_p_val = stats.shapiro(differences)\n",
     "\n",
-    "# TODO (d): 차이의 95% 신뢰구간\n"
+    "if diff_p_val >= 0.05:\n",
+    "    print(f\"p={diff_p_val:.4f} (정규성 만족) -> 모수 검정 사용 (예: t-test)\")\n",
+    "else:\n",
+    "    print(f\"p={diff_p_val:.4f} (정규성 위배) -> 비모수 검정 사용 (예: Wilcoxon)\")\n",
+    "\n",
+    "t_stat, p_val = stats.ttest_rel(after_scores, before_scores, alternative='greater')\n",
+    "\n",
+    "print(f\"t-statistic: {t_stat:.3f}, p-value: {p_val:.4f}\")\n",
+    "\n",
+    "if p_val < 0.05:\n",
+    "    print(\"영어학습 앱 효과가 통계적으로 유의합니다.\")\n",
+    "else:\n",
+    "    print(\"영어학습 앱 효과가 없다고 볼 수 있습니다.\")\n",
+    "\n",
+    "d_value = diff_mean / diff_std\n",
+    "\n",
+    "# TODO (c): 결론\n",
+    "print(f\"영어학습 앱 사용 후가 전보다 평균 {diff_mean:.2f}점 높다.\")\n",
+    "print(f\"이는 차이 없음에서 t-통계량({t_stat:.2f})만큼 떨어져있는 수치이며\")\n",
+    "print(f\"p-value({p_val:.2f})에 의해 귀무가설을 유의하게 기각한다고 볼 수 있음.\")\n",
+    "print(f\"영어학습 앱의 효과 크기는 {d_value:.2f}이며,\")\n",
+    "if abs(d_value) >= 0.8:\n",
+    "    print(\"효과 크기: 큼 (Large Effect)\")\n",
+    "elif abs(d_value) >= 0.5:\n",
+    "    print(\"효과 크기: 중간 (Medium Effect)\")\n",
+    "elif abs(d_value) >= 0.2:\n",
+    "    print(\"효과 크기: 작음 (Small Effect)\")\n",
+    "print(f\"따라서 영어학습 앱을 사용할 것을 권장합니다.\")\n",
+    "# TODO (d): 차이의 95% 신뢰구간\n",
+    "\n",
+    "ci = stats.t.interval(confidence=1-alpha, df=n_students-1, loc=diff_mean, scale=diff_se)\n",
+    "print(f\"평균 : {diff_mean}\")\n",
+    "print(f\"95% 신뢰구간 : [{ci[0]:.2f}, {ci[1]:.2f}]\")"
    ]
   },
   {
@@ -994,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1028,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
